istio-deployment.yaml
apiVersion: v1

kind: Service

metadata:

  name: customer-demo-service-v2

  labels:

    app: customer-demo-service-v2

spec:

  type: NodePort

  ports:

  - port: 8090

    name: http

  selector:

    app: customer-demo-service-v2

---

apiVersion: apps/v1

kind: Deployment

metadata:

  creationTimestamp: null

  name: customer-demo-service-v2
  
  labels:

    app: customer-demo-service-v2

    version: v2

spec:

  replicas: 1

 
  selector:
  
      matchLabels:
  
        app: customer-demo-service-v2
  
        version: v2

  template:

    metadata:

      annotations:

        sidecar.istio.io/status: '{"version":"43466efda2266e066fb5ad36f2d1658de02fc9411f6db00ccff561300a2a3c78","initContainers":["istio-init","enable-core-dump"],"containers":["istio-proxy"],"volumes":["istio-envoy","istio-certs"]}'

      creationTimestamp: null

      labels:

        app: customer-demo-service-v2

        version: v2

    spec:
      
      serviceAccountName: customer-demo-service-2
      
      containers:

      - image: anirbang24/customer-demo-service:2.0

        imagePullPolicy: IfNotPresent

        name: customer-demo-service-v2

        ports:

        - containerPort: 8090

      - args:

        - proxy

        - sidecar

        - --configPath

        - /etc/istio/proxy

        - --binaryPath

        - /usr/local/bin/envoy

        - --serviceCluster

        - customer-demo-service

        - --drainDuration

        - 45s

        - --parentShutdownDuration

        - 1m0s

        - --discoveryAddress

        - istio-pilot.istio-system:15005

        - --discoveryRefreshDelay

        - 1s

        - --zipkinAddress

        - zipkin.istio-system:9411

        - --connectTimeout

        - 10s

        - --statsdUdpAddress

        - istio-mixer.istio-system:9125

        - --proxyAdminPort

        - "15000"

        - --controlPlaneAuthPolicy

        - MUTUAL_TLS

        image: docker.io/istio/proxy:0.7.1

        imagePullPolicy: IfNotPresent

        name: istio-proxy

        resources: {}

        securityContext:

          privileged: false

          readOnlyRootFilesystem: true

          runAsUser: 1337

        volumeMounts:

        - mountPath: /etc/istio/proxy

          name: istio-envoy

        - mountPath: /etc/certs/

          name: istio-certs

          readOnly: true

      volumes:

      - emptyDir:

          medium: Memory

        name: istio-envoy

      - name: istio-certs

        secret:

          optional: true

          secretName: istio.default

status: {}

---
